# uav

./: .gitignore  CONTINUE_WORKFLOW_ANALYSIS.md  CROSS_PLATFORM_DEPLOYMENT.md  README.md  cross_platform_startup.py  fix_agent_paths.py  generate_workflow_graph.py  main.py  pyproject.toml  requirements.txt
backend/: config.py  cross_platform_utils.py  prompts.py  tools.py
backend/agents/: aerodynamics.py  base_agent.py  coordinator.py  manufacturing.py  mission_planner.py  propulsion.py  structures.py
backend/langgraph/: state.py  workflow.py
frontend/: main.py
frontend/assets/: styles.css
frontend/pages/: 1_🤖_Agent_Details.py  2_💬_Conversations.py  3_📊_Workflow_Status.py
