[project]
name = "static-agent-dashboard"
version = "0.1.0"
description = "Static multi-agent system for UAV design with chat-based communication"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.0.69",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-core>=0.1.12",
    "streamlit>=1.29.0",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "pydantic>=2.5.2",
    "python-dateutil>=2.8.2",
    "orjson>=3.9.10",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]
